--- a/about.html
+++ b/about.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WINGMAN SHOP О магазине</title>
-    <link rel="stylesheet" href="css\about.css">
+    <link rel="stylesheet" href="css/about.css">
+    <style>
+        
+
+        
+    </style>
 </head>
 <body>
     <header>
@@ -23,35 +28,42 @@
     </header>
     <main>
         <div class="about-container">
-            <div class="header">
-                <img src="images/logo.jpg" alt="Логотип компании" class="profile-pic">
-            </div>
-
-            <div class="about-content">
+            <div class="about-header">
+                <img src="images/logo.jpg" alt="Логотип компании">
                 <h1>WINGMAN SHOP</h1>
-                <h2>Продажа игр и игровых товаров</h2>
-                <p>
-                    WINGMAN SHOP — это онлайн-магазин, который предлагает широкий ассортимент видеоигр и игровых аксессуаров. Мы стремимся предоставить нашим клиентам только самые лучшие продукты от ведущих мировых производителей. Независимо от того, ищете ли вы новинки игровой индустрии, эксклюзивные коллекционные издания или нуждаетесь в аксессуарах для геймеров, у нас есть все, что вам нужно.
-                </p>
-                <p>
-                    Мы работаем напрямую с крупнейшими издателями и разработчиками, чтобы предоставить нашим покупателям самые актуальные и качественные товары. Наши цены — одни из самых доступных на рынке, а наша служба поддержки всегда готова помочь вам с выбором и решить любые вопросы.
-                </p>
-                <p>
-                    В WINGMAN SHOP мы заботимся о своих клиентах, обеспечивая не только большой ассортимент игр для всех платформ, но и оперативную доставку, акции и бонусные программы для постоянных покупателей.
-                </p>
-                <p>
-                    В нашем магазине вы найдете игры для всех платформ: PlayStation, Xbox, Nintendo, а также для ПК. Мы работаем только с проверенными поставщиками, чтобы гарантировать высокое качество и отличные цены. Наша цель — сделать покупку игр удобной и безопасной, а также помочь нашим клиентам найти идеальный товар для себя.
-                </p>
-                <p>
-                    Мы также предлагаем акции и скидки на популярные игры и аксессуары, чтобы наши покупатели могли наслаждаться играми по доступным ценам. Для нас важен каждый клиент, и мы всегда рады помочь вам с выбором товара!
-                </p>
+            </div>
+            <div class="about-content">
+
+                <div class="about-section">
+                    <h2>О компании WINGMAN</h2>
+                    <p>
+                        WINGMAN SHOP — это онлайн-магазин, который предлагает широкий ассортимент видеоигр и игровых аксессуаров. Мы стремимся предоставить нашим клиентам только самые лучшие продукты от ведущих мировых производителей.
+                    </p>
+                    <p>
+                        В нашем магазине вы найдете игры для всех платформ: PlayStation, Xbox, Nintendo, а также для ПК. Мы работаем только с проверенными поставщиками, чтобы гарантировать высокое качество и отличные цены.
+                    </p>
+                </div>
+
+                <div class="partners-section">
+                    <h2>Партнеры WINGMAN SHOP</h2>
+                    <p>Мы сотрудничаем с ведущими компаниями игровой индустрии, чтобы предложить нашим клиентам лучшие продукты:</p>
+                    <ul>
+                        <li>PlayStation</li>
+                        <li>Microsoft Xbox</li>
+                        <li>Nintendo</li>
+                        <li>Valve</li>
+                        <li>Ubisoft</li>
+                        <li>Electronic Arts</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </main>
     <footer>
-        <h2 id="contact">Контакты</h2>
+        <p id="contact">Контакты</p>
         <p>Email: support@wingmanstore.com</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
 </body>
 </html>
+
