--- a/add_product.html
+++ b/add_product.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="form-container">
-            <h1>Форма добавления товара</h1>
+            <h1>Форма добавления игры</h1>
             <form id="addProductForm">
                 <label for="name">Наименование *</label>
                 <p class="hint">Длина должна быть от 5 до 20 символов.</p>
@@ -88,7 +88,7 @@
     </main>
     <footer>
         <a id="scrollTop" title="Наверх">↑</a>
-        <h2 id="contact">Контакты</h2>
+        <p id="contact">Контакты</p>
         <p>Email: support@wingmanstore.com</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
