--- a/catalog.html
+++ b/catalog.html
@@ -28,6 +28,7 @@
 
   </header>
   <section id="catalog-description">
+    <h2>Каталог игр</h2>
     <p>
       Добро пожаловать в каталог нашего магазина! Здесь вы найдете широкий выбор компьютерных игр для всех платформ, от популярных экшенов до увлекательных ролевых игр. Мы собрали только лучшие и актуальные игры, которые подойдут как новичкам, так и опытным игрокам. 
     </p>
@@ -46,7 +47,6 @@
                 <li><a href="#" class="category" data-category="Песочница">Песочница</a></li>
             </ul>
 
-            <!-- Ползунок для фильтрации по цене -->
             <h3>Цена</h3>
             <label for="price-range">Выберите диапазон цены:</label>
             <input type="range" id="price-range" min="0" max="5000" value="5000" step="100">
@@ -123,7 +123,7 @@
     <script src="js\catalog.js"></script>
 
     <footer>
-        <h2 id="contact">Контакты</h2>
+        <p id="contact">Контакты</p>
         <p>Email: support@wingmanstore.com</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
