--- a/faq.html
+++ b/faq.html
@@ -65,7 +65,7 @@
     <script src="js\faq.js"></script>
     </main>
     <footer>
-        <h2 id="contact">Контакты</h2>
+        <p id="contact">Контакты</p>
         <p>Email: support@wingmanstore.com</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
