--- a/index.html
+++ b/index.html
@@ -22,22 +22,16 @@
                 <li><a href="about.html">О магазине</a></li>
             </ul>
         </nav>
-
-        <form action="search.html" method="get" class="search-form">
-            <input type="text" name="query" placeholder="Поиск по играм..." required>
-            <button type="submit">Поиск</button>
-        </form>
-
     </header>
     <main>
     <section id="home">
-        <h2 id="H2">Добро пожаловать в наш магазин!</h2>
+        <h1 id="H1">WINGMAN SHOP</h1>
         <p id="H2">Здесь вы найдете лучшие компьютерные игры по самым низким ценам! В нашем магазине представлены только самые актуальные игры для всех возрастов и предпочтений. Мы предлагаем широкий выбор игр для различных платформ, а также аксессуары и игровые товары. Все игры проходят проверку качества, и вы можете быть уверены в их подлинности.</p>
         <p id="H2">Сделайте покупки легко и удобно! Мы предлагаем не только популярные игры, но и редкие коллекционные издания. Наши клиенты всегда получают отличные условия и акции, чтобы каждая покупка была выгодной.</p>
     </section>
 
     <section id="games">
-        <h2 id="H2">Популярные игры в нашем ассортименте</h2>
+        <h2 id="H2">Популярные игры</h2>
         <p id="H2">Наш магазин предлагает широкий выбор популярных и востребованных игр. Мы уверены, что каждый найдет игру по своему вкусу, будь то захватывающий шутер, многопользовательская игра или увлекательная песочница. Ниже представлены наши самые продаваемые игры:</p>
         
         <table id="gamesTable">
@@ -127,7 +121,7 @@
     <script src="js\main.js"></script>
 </main>
 <footer>
-    <h2 id="contact">Контакты</h2>
+    <p id="contact">Контакты</p>
     <p>Email: support@wingmanstore.com</p>
     <p>Телефон: +7 (123) 456-78-90</p>
 </footer>
