--- a/cart.html
+++ b/cart.html
@@ -20,12 +20,6 @@
                 <li><a href="about.html">О магазине</a></li>
             </ul>
         </nav>
-
-        <form action="search.html" method="get" class="search-form">
-            <input type="text" name="query" placeholder="Поиск по играм..." required>
-            <button type="submit">Поиск</button>
-        </form>
-
     </header>
     <main>
     <section class="product-list">
@@ -34,7 +28,7 @@
 </main>
     <script src="js\cart.js"></script>
     <footer>
-        <h2 id="contact">Контакты</h2>
+        <p id="contact">Контакты</p>
         <p>Email: support@wingmanstore.com</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
