--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
 
   </header>
   <section id="catalog-description">
-    <h2>Каталог игр</h2>
+    <h1>Каталог игр</h1>
     <p>
       Добро пожаловать в каталог нашего магазина! Здесь вы найдете широкий выбор компьютерных игр для всех платформ, от популярных экшенов до увлекательных ролевых игр. Мы собрали только лучшие и актуальные игры, которые подойдут как новичкам, так и опытным игрокам. 
     </p>
@@ -42,7 +42,7 @@
                 <li><a href="#" class="category" data-category="Песочница">Песочница</a></li>
             </ul>
 
-            <h3>Цена</h3>
+            <p>Цена</p>
             <label for="price-range">Выберите диапазон цены:</label>
             <input type="range" id="price-range" min="0" max="5000" value="5000" step="100">
             <p id="price-display">До 5000 руб.</p>
