--- a/products/product2.html
+++ b/products/product2.html
@@ -25,7 +25,7 @@
     <main>
         <div class="modal" id="imageModal">
             <span class="close" id="closeModal">&times;</span>
-            <img id="modalImage" src="" alt="Увеличенное изображение">
+            <img id="modalImage" src="" alt="Увеличенное изображение товара">
         </div>
 
         <div class="container" id="game">
@@ -36,14 +36,14 @@
             </div>
             <div class="product-gallery">
                     <div class="image-container">
-                        <img id="mainImage" src="../images/product2_1.jpg" alt="Minecraft preview image" class="main-image">
+                        <img id="mainImage" src="../images/product2_1.jpg" alt="Minecraft изображение геймплея" class="main-image">
                         <img src="../images/zoom.png" alt="Лупа" class="zoom-icon" id="zoomIcon" data-large="../images/product2_1.jpg">
                     </div>
                 <div class="thumbnails">
-                    <img src="../images/product2_1.jpg" alt="Minecraft preview image 1" class="thumbnail">
-                    <img src="../images/product2_2.jpg" alt="Minecraft preview image 2" class="thumbnail">
-                    <img src="../images/product2_3.jpg" alt="Minecraft preview image 3" class="thumbnail">
-                    <img src="../images/product2_4.jpg" alt="Minecraft preview image 4" class="thumbnail">
+                    <img src="../images/product2_1.jpg" alt="Minecraft изображение геймплея 1" class="thumbnail">
+                    <img src="../images/product2_2.jpg" alt="Minecraft изображение геймплея 2" class="thumbnail">
+                    <img src="../images/product2_3.jpg" alt="Minecraft изображение геймплея 3" class="thumbnail">
+                    <img src="../images/product2_4.jpg" alt="Minecraft изображение геймплея 4" class="thumbnail">
                 </div>
             </div>
             <div class="product-description">
